# interactive-games

./: .env  .env.development  .gitignore  README.md  ig.code-workspace  package-lock.json  package.json
.github/workflows/: devel-to-release.yml
apps/ig-api/: .env  .env.ig-api  .env.ig-api.development  .pm2.ecosystem.config.cjs  dev-index.ts  index.ts  package.json  tsconfig.json  vitest.config.ts
apps/ig-dev-http-proxy/: .env.ig-dev-http-proxy  .gitignore  index.ts  package.json  tsconfig.json
apps/ig-env/: .gitignore  expo-index.ts  index.ts  package.json  tsconfig.json  vitest.config.ts
apps/ig-expo/: .env.development  .env.ig-expo.development  app.config.ts  app.json  metro.config.js  package.json  tsconfig.json
python/apps/ig-ws/: .env  .env.development  .env.production  .gitignore  Makefile  mypy.ini  pyproject.toml  pytest.ini
python/apps/ig-ws/old/: app_redis_client.py  app_redis_client_test_1.py  app_websocket_server.py  app_websocket_server_test_1.py  app_ws_program.py  app_ws_program_test_1.py
python/apps/ig-ws/src/: program.py
python/apps/ig-ws/src/ws_program/: app_auth_token_manager.py  app_auth_token_manager_test.py  app_defs.py  app_websocket_server.py  app_websocket_server_test.py  app_ws_program.py  new_app_redis_consumer.py  new_app_redis_consumer_test.py  new_app_ws_program.py  new_app_ws_program_test.py
scripts/bash/: common.sh
scripts/new-python/: coverage_defs.py  open-py-coverage-report.py  produce-py-coverage-report.py  produce-py-coverage-report.sh  run-all-dev.py  run-all-dev.sh
scripts/python/: coverage_defs.py  (+2 more)
(+39 files in other folders)
