[project]
name = "ig-ws"
version = "0.1.0"
description = "App WebSocket Server"
requires-python = ">=3.13"

[dependency-groups]
dev = [
  "pytest (>=9.0.2,<10.0.0)",
  "pytest-asyncio (>=1.3.0,<2.0.0)",
  "pytest-cov (>=7.0.0,<8.0.0)",
  "pytest-mock (>=3.15.1,<4.0.0)",
  "coverage (>=7.13.2,<8.0.0)",
  "mypy (>=1.19.1,<2.0.0)",
  "ruff (>=0.14.14,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
dotenv = "^0.9.9"
ig-py-lib = {path = "../../packages/ig-py-lib", develop = true}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

